--- a/Sample.htm
+++ b/Sample.htm
@@ -6,7 +6,7 @@
 </head>
 <body >
   <h1>Here is a simple page</h1>
-  <p>You can <a href="sample2.html">click here</a> to go to another page</p>
+  <p>You can <a href="Sample2.htm">click here</a> to go to another page</p>
 
   <h1>Edit Me</h1>
   <h2>Add some html</h2>
