--- a/Sample2.htm
+++ b/Sample2.htm
@@ -7,7 +7,8 @@
 <body >
   <h1>Here is a second page</h1>
   <p>This is another html file</p>
-  <p>Don't worry, you can <a href="sample.html">go back here</a></p>
-
+  <p>Don't worry, you can <a href="Sample.htm">go back here</a></p>
+<p/>
+<p>asdfkj skfj laksjdf slkfj asldfkj askdfj aslkdfj alskdfj alskdjf sdfj alskdf asdf </p>
 </body>
 </html>
