--- a/notes/gettingstarted.htm
+++ b/notes/gettingstarted.htm
@@ -7,11 +7,11 @@
 </head>
 <body >
 
-<h1>Install Atom</h1>
+<h1>Writing HTML</h1>
 
 <p>Atom is the tool we'll use to write our web pages.</p>
 <p> Download Atom <a href="https://atom.io/">here</a>.</p>
-<p/>ß
+<p/>
 <p>You can preview your web pages in Atom using the <b>atom-html-preview</b> package. To install the package in Atom:</p>
 <li>Open the Atom->Preferences menu item.</li>
 <li>Click the "+Insall+" tab</li>
@@ -24,7 +24,7 @@
 <p>Lots of people will want to make changes to the website at the same time.  So what happen's if Charlie accidentally updates or deletes Sally's page?  Argh, she isn't going to be happy!  Don't worry, Charlie, we're going to use a tool called <b>GitHub</b> that allows us to keep all the changes we make, so as long as Sally "checked in" her page, we'll be able to get the old version back.  Phew!</p>
 <p/>
 <p>So here is how it works:</p>
-<li></li>
+<li>xxxxxxxxxxxxx</li>
 
 
 </body>
