--- a/playpen/sally/sample.htm
+++ b/playpen/sally/sample.htm
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="./css/test.css" media="screen">
+<link rel="stylesheet" type="text/css" href="test.css" media="screen">
 
 </head>
 <body >
-  <h1>Here is a simple page </h1>
+  <h1>Sally</h1>
   <p>You can <a href="Sample2.htm">click here</a> to go to another page</p>
 
   <h1>Edit Me</h1>
@@ -13,7 +13,7 @@
   <p>You can edit this file and add your own elements like text, images, links or embed content e.g.</p>
 <div class="boxed">
   <p>My name is Sally and I like cats.  Here is a picture of my cat:</p>
-  <img  width="200px" src="./images/cat.jpeg"/>
+  <img  width="200px" src="cat.jpeg"/>
   <p>I also like coding. I use <a href="https://scratch.mit.edu/">scratch</a> to build games.  You can create games like this one:</p>
   <iframe allowtransparency="true" width="485" height="402" src="https://scratch.mit.edu/projects/embed/10000036/?autostart=false" frameborder="0" allowfullscreen></iframe>
 </div>
