--- a/playpen/sally/sample2.htm
+++ b/playpen/sally/sample2.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="./css/test.css" media="screen">
+<link rel="stylesheet" type="text/css" href="test.css" media="screen">
 
 </head>
 <body >
