--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 
 </head>
 <body>
-  <div class="title">Welcome to St.Lukes Kids Club</div>
+  <div class="title">Welcome to St.Lukes Coding Club</div>
 </body>
 
 <p>
@@ -25,6 +25,9 @@
 <p/>
 <p/>
 <div>
+<p>
+  If you are new to code club, check out the <a href="help.htm">help page</a> to find examples to get you started!
+</p>
 <p>
   If you're a pupil and want to get involved, email <a href="mailto:contact@stlukes.space">contact@stlukes.space</a>.
 </p>
