--- a/help.htm
+++ b/help.htm
@@ -11,4 +11,7 @@
 <li><a href="https://trinket.io/html/ad92ed8ce0">Testing Tom's Page</a></li>
 <li><a href="https://trinket.io/html/559dd7ce76">Sample Sally's Page</a></li>
 <li><a href="https://trinket.io/library/trinkets/create?lang=html">Start with a blank canvas</a></li>
+<p/>
+<p>Or look at your co-coders' trinkets for ideas:</p>
+<li><a href="https://trinket.io/html/11eca8c480?e=1">Charlie's Page</a></li>
 </html>
