--- a/help.htm
+++ b/help.htm
@@ -7,11 +7,21 @@
 
 <p>You can start to build your own page using <a href="https://trinket.io">Trinket</a>.  This website has lots of samples of html and python.  Try out some of the links below.</p>
 
-<li><a href="https://trinket.io/html">Trinket HTML starting sample</a></li>
-<li><a href="https://trinket.io/html/ad92ed8ce0">Testing Tom's Page</a></li>
-<li><a href="https://trinket.io/html/559dd7ce76">Sample Sally's Page</a></li>
-<li><a href="https://trinket.io/library/trinkets/create?lang=html">Start with a blank canvas</a></li>
-<p/>
+<ul>
+  <li><a href="https://trinket.io/html">Trinket HTML starting sample</a></li>
+  <li><a href="https://trinket.io/html/ad92ed8ce0">Testing Tom's Page</a></li>
+  <li><a href="https://trinket.io/html/559dd7ce76">Sample Sally's Page</a></li>
+  <li><a href="https://trinket.io/library/trinkets/create?lang=html">Start with a blank canvas</a></li>
+</ul>
 <p>Or look at your co-coders' trinkets for ideas:</p>
-<li><a href="https://trinket.io/html/11eca8c480?e=1">Charlie's Page</a></li>
+<ul>
+  <li><a href="https://trinket.io/html/11eca8c480?e=1">Charlie's Page</a></li>
+</ul>
+<p>There is lots of help on how to write html on the internet.  Here are some pages that might be helpful:</p>
+<ul>
+  <li><a href="https://www.pluralsight.com/courses/teaching-kids-basic-html?gclid=CLjQ7uT9o9ACFUa6Gwod0EsDXw">An HTML course for kids on pluralsight</a></li>
+  <li><a href="http://www.goodellgroup.com/tutorial/">Learning HTML for kids - a tutorial from goodellgroup.com</a></li>
+  <li><a href="http://www.lissaexplains.com/">Lisa Explains it All - An HTML help website for kids</a></li>
+
+  </ul>
 </html>
