--- a/Sample.htm
+++ b/Sample.htm
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="./css/test.css" media="screen">
+<link rel="stylesheet" type="text/css" href="./css/main.css" media="screen">
 
 </head>
 <body >
-  <h1>Here is a simple page </h1>
+  <h1>Here is a simple page</h1>
   <p>You can <a href="Sample2.htm">click here</a> to go to another page</p>
 
   <h1>Edit Me</h1>
