--- a/Sample2.htm
+++ b/Sample2.htm
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="./css/test.css" media="screen">
+<link rel="stylesheet" type="text/css" href="./css/main.css" media="screen">
 
 </head>
 <body >
   <h1>Here is a second page</h1>
   <p>This is another html file</p>
-  <p>Don't worry, you can <a href="sample.htm">go back here</a></p>
+  <p>Don't worry, you can <a href="Sample.htm">go back here</a></p>
 <p/>
 <p>asdfkj skfj laksjdf slkfj asldfkj askdfj aslkdfj alskdfj alskdjf sdfj alskdf asdf </p>
 </body>
