working with images lesson

--- a/index.htm
+++ b/index.htm
@@ -29,7 +29,7 @@
 <p/>
 <div>
 <p>
-  If you are new to code club, check out the <a href="help.htm">help page</a> to find examples to get you started!
+  If you are new to code club, check out the <a href="help.html">help page</a> to find examples to get you started!
 </p>
 <p>
   If you're a pupil and want to get involved, email <a href="mailto:contact@stlukes.space">contact@stlukes.space</a>.
