--- a/playpen/samples/usingimages/main.html
+++ b/playpen/samples/usingimages/main.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-    <p>Here is an image.</p>
+    <p>Here is an image.  You can see the html on Trinket here.</p>
     <p>That's pretty but what if want to put it as a <a href="backgroundimage.html">background</a>?</p>
     <img src="cityscape.gif"/>
 
