--- a/playpen/samples/usingimages/backgroundimage2.html
+++ b/playpen/samples/usingimages/backgroundimage2.html
@@ -1,6 +1,8 @@
 <html>
 <body style="background-image:url('cityscape.gif');color:white;padding:20px">
   <p>Here the image is the background of the page.</p>
-
-</body>
+    <p>Can you see what happens at the bottom of the page?</p>
+    <p>The image repeats itself!</p>
+    <p>Let's <a href="backgroundimage3.html">centre it!<a>
+  </body>
 </html>
