--- a/playpen/charlie/index.html
+++ b/playpen/charlie/index.html
@@ -17,3 +17,5 @@
 <iframe allowtransparency="false" width="0" height="0" src="//scratch.mit.edu/projects/embed/114095633/?autostart=false" frameborder="0" allowfullscreen></iframe>
 <h2>I will build a <font style="color:brown"><B>WALL</B></font></p></h2>
 <p>How many <font style="color:gold"><b>DONALD TRUMPS</b></font></p> have you voted for?
+</body>
+</html>
